--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
     <nav>
         <!-- <a class="btn .btn-primary" routerLink="/dashboard" routerLinkActive="active">Dashboard</a> -->
         <a class="btn .btn-primary" routerLink="/home" routerLinkActive="active" id="primary">Home</a>
-        <a class="btn .btn-primary" routerLink="/department" routerLinkActive="active" id="primary">About</a>
-        <a class="btn .btn-primary" routerLink="/employee" routerLinkActive="active" id="primary">Contact Us</a>        
-        <a class="btn .btn-primary" routerLink="/nav" routerLinkActive="active" id="primary">Details</a>       
+        <a class="btn .btn-primary" routerLink="/about" routerLinkActive="active" id="primary">About</a>
+        <a class="btn .btn-primary" routerLink="/contactUs" routerLinkActive="active" id="primary">Contact Us</a>        
+        <a class="btn .btn-primary" routerLink="/details" routerLinkActive="active" id="primary">Details</a>       
         <!-- <a class="btn .btn-primary" routerLink="/profile" routerLinkActive="active">Profile</a>        -->
     </nav>
     <router-outlet></router-outlet>
