--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -33,7 +33,7 @@
 <div class="padding"></div>
 <!-- Site footer -->
 <footer class="footer">
-    <p>&copy; Apollo Munich Health Insurance Company 2017</p>
+    <p>&copy; Abc Pvt Ltd 2018</p>
 </footer>
 
 <!-- main end -->
