--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <a class="btn .btn-primary" routerLink="/home" routerLinkActive="active" id="primary">Home</a>
         <a class="btn .btn-primary" routerLink="/about" routerLinkActive="active" id="primary">About</a>
         <a class="btn .btn-primary" routerLink="/contactUs" routerLinkActive="active" id="primary">Contact Us</a>        
-        <a class="btn .btn-primary" routerLink="/details" routerLinkActive="active" id="primary">Details</a>       
+        <a class="btn .btn-primary" routerLink="/services" routerLinkActive="active" id="primary">Services</a>       
         <!-- <a class="btn .btn-primary" routerLink="/profile" routerLinkActive="active">Profile</a>        -->
     </nav>
     <router-outlet></router-outlet>
