--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron">
-        <h1>Marketing stuff!</h1>
+        <h1>Abdullah M.Al-Sayari Est.</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
         <p><a class="btn btn-lg btn-success" role="button">Get started today</a></p>
     </div>
@@ -33,7 +33,7 @@
 <div class="padding"></div>
 <!-- Site footer -->
 <footer class="footer">
-    <p>&copy; Abc Pvt Ltd 2018</p>
+    <p>&copy; Asker Transport Pvt Ltd 2018</p>
 </footer>
 
 <!-- main end -->
