--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,8 +4,6 @@
 .btn {
     /* display: inline-block; */
     padding: 6px 83px;
-
-
     padding-top: 17px;
     margin-bottom: 0;
     font-size: 14px;
@@ -24,4 +22,17 @@
     background-image: none;
     border: 1px solid transparent;
     border-radius: 4px;
+}
+#primary{
+    color: blue;
+}
+.active{
+    color: blue;
+}
+.color{
+    background-color: bisque;
+}
+
+.footer{
+    background-color: gray;
 }
