--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -5,47 +5,36 @@
     <!-- Jumbotron -->
     <div class="jumbotron">
         <h1>Abdullah M.Al-Sayari Est.</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-        <p><a class="btn btn-lg btn-success" role="button">Get started today</a></p>
+        <p class="lead">We provide multiple types of vehicles for transporting purpose.</p>
+        <!-- <p><a class="btn btn-lg btn-success" role="button">Get started today</a></p> -->
     </div>
     <!-- Example row of columns -->
-    <!-- <div class="row">
-        <div class="col-lg-4">
-            <h2>Heading</h2>
-            <p class="paragraph">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            </p>
-            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-            <h2>Heading</h2>
-            <p class="paragraph">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            </p>
-            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-            <h2>Heading</h2>
-            <p class="paragraph">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-    </div> -->
 
-    <div>
-            <h2 >Head Office</h2>
-        <div class="align">           
-            <div style="text-align: left">Adderss: Al Ahsa-Qatar Road Kingdom of Saudi Arabia</div>
-            <div style="text-align: left">email: info@askertransport.com</div>
-            <div style="text-align: left">Tel: 123-456-7890</div>
-            <div style="text-align: left">Fax: 123-456-7890</div>
+
+    <h2 >WELCOME!</h2>
+    Hiiii
+    <div class="row">
+        <div class="col-lg-4">
+            <h2>Head Office</h2>
+            Adderss: Al Ahsa-Qatar Road Kingdom of Saudi Arabia <br>
+            Email:  contactus@askartransport.com, arshad@askartransport.com,
+                    zulkar@askartransport.com, abdullah@askartransport.com<br>
+            Tel No: 123-456-7890<br>
+            Fax: 123-456-7890
+        </div>
+
+        <div class="col-lg-8">
+            <h2>Employment</h2>
+            <p class="padding">
+                To apply for a job with Askar Transport, please send your C.V. to: contactus@askertransport.com
+            </p>
         </div>
     </div>
-    <h2>Employment</h2>
-    To apply for a job with Asker Transport, please send your C.V. to: contactus@askertransport.com
-
 </main>
 <div class="padding"></div>
+
 <!-- Site footer -->
 <footer class="footer">
-    <p>&copy; Asker Transport Pvt Ltd 2018</p>
+    <p class="footer">&copy; Askar Transport 2018</p>
 </footer>
-
 <!-- main end -->
