--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,8 @@
     <!-- Jumbotron -->
     <div class="jumbotron">
         <h1>Abdullah M.Al-Sayari Est.</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-        <p><a class="btn btn-lg btn-success" role="button">Get started today</a></p>
+        <p class="lead">We provide multiple types of vehicles for transporting purpose.</p>
+        <!-- <p><a class="btn btn-lg btn-success" role="button">Get started today</a></p> -->
     </div>
     <!-- Example row of columns -->
     <div class="row">
@@ -33,7 +33,7 @@
 <div class="padding"></div>
 <!-- Site footer -->
 <footer class="footer">
-    <p>&copy; Asker Transport Pvt Ltd 2018</p>
+    <p>&copy; Askar Transport  2018</p>
 </footer>
 
 <!-- main end -->
