--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,3 +1,15 @@
 .paragraph {
     text-align: left;
 }
+#primary{
+    font-weight: bold;
+}
+.image{
+    height: 400px;
+    width: 490px;
+    padding: 1px;
+    margin: -10px;
+}
+.footer{
+    margin-top: 20px; 
+}
