--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,35 +5,48 @@
     <!-- Jumbotron -->
     <div class="jumbotron">
         <h1>Abdullah M.Al-Sayari Est.</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-        <p><a class="btn btn-lg btn-success" role="button">Get started today</a></p>
+        <p class="lead">We provide multiple types of vehicles for transporting purpose.</p>
+        <!-- <p><a class="btn btn-lg btn-success" role="button">Get started today</a></p> -->
     </div>
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-lg-4">
             <h2>Heading</h2>
-            <p class="paragraph">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            </p>
-            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+            <img class="image" src="../../assets/images/1.jpg" alt="" title="">            
         </div>
         <div class="col-lg-4">
             <h2>Heading</h2>
-            <p class="paragraph">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            </p>
-            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+            <img  class="image" src="../../assets/images/2.jpg" alt="" title="">            
         </div>
         <div class="col-lg-4">
             <h2>Heading</h2>
-            <p class="paragraph">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+            <img class="image" src="../../assets/images/3.jpg" alt="" title="">            
         </div>
+        
+        
     </div>
+    <div class="row">
+            <div class="col-lg-4">
+                <h2>Heading</h2>
+                <img class="image" src="../../assets/images/4.jfif" alt="" title="">            
+            </div>
+            <div class="col-lg-4">
+                <h2>Heading</h2>
+                <img  class="image" src="../../assets/images/google-truck.jpg" alt="" title="">            
+            </div>
+            <div class="col-lg-4">
+                <h2>Heading</h2>
+                <img class="image" src="../../assets/images/images.jfif" alt="" title="">            
+            </div>
+            
+            
+        </div>
 
 </main>
 <div class="padding"></div>
 <!-- Site footer -->
 <footer class="footer">
-    <p>&copy; Asker Transport Pvt Ltd 2018</p>
+    <p>&copy; Askar Transport  2018</p>
 </footer>
 
 <!-- main end -->
