--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -12,7 +12,7 @@
 
 
     <h2 >WELCOME!</h2>
-    Hiiii
+    <!-- Hiiii -->
     <div class="row">
         <div class="col-lg-4">
             <h2>Head Office</h2>
@@ -26,7 +26,7 @@
         <div class="col-lg-8">
             <h2>Employment</h2>
             <p class="padding">
-                To apply for a job with Askar Transport, please send your C.V. to: contactus@askertransport.com
+                To apply for a job with Askar Transport, please send your C.V. to: contactus@askartransport.com
             </p>
         </div>
     </div>
