--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
 <!-- Main Start -->
-
+<!-- CONTACT US -->
 <main role="main">
 
     <!-- Jumbotron -->
@@ -17,7 +17,7 @@
         <div class="col-lg-4">
             <h2>Head Office</h2>
             Adderss: Al Ahsa-Qatar Road Kingdom of Saudi Arabia <br>
-            Email:  contactus@askartransport.com, arshad@askartransport.com,
+            Email:  info@askartransport.com, arshad@askartransport.com,
                     zulkar@askartransport.com, abdullah@askartransport.com<br>
             Tel No: 123-456-7890<br>
             Fax: 123-456-7890
@@ -26,7 +26,7 @@
         <div class="col-lg-8">
             <h2>Employment</h2>
             <p class="padding">
-                To apply for a job with Askar Transport, please send your C.V. to: contactus@askartransport.com
+                To apply for a job with Askar Transport, please send your C.V. to: info@askartransport.com
             </p>
         </div>
     </div>
