--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -13,20 +13,29 @@
 .footer{
     margin-top: 20px; 
 }
-.jumbotron {
-    width: 1500px;
-    height: 550px;
+.lead{
     color: white;
+    padding: 40px;
+    font-size: 30px;
+    font-weight: bold;
+}
+.jumbotron {
+    
+    color: black;
     border-radius: 6px;
-    padding-right: 60px;
+    height: 400px;
+    /* height: 400px; */
+    /* width: 400px; */
+    /* padding-right: 60px;
     padding-left: 60px;
     padding-top: 64px;
-   
-    /* overflow: hidden;
-    position:  inherit; */
+    */
+    /* overflow: hidden;*/
+    position:  inherit; 
     /* overflow-x: scroll; */
     /* position: relative; */
     background-size: cover;
-    display: block;
-    background-image: url('/assets/images/4.jfif');
+    display: block; 
+    margin-left: auto;
+    background-image: url('/assets/images/home.jpg');
 }
