--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,8 +9,6 @@
         <!-- Section 1 -->
         <section class="section background-white">
           <div class="line text-center">
-            <!--<i class="icon-sli-heart text-primary text-size-40"></i>-->
-            <h2 class="text-dark text-size-50 text-m-size-40">Who <b>We Are?</b></h2>
             <hr class="break background-primary break-small break-center margin-bottom-50">
           </div>
           <div class="line">
@@ -54,6 +52,6 @@
   </div>
   <footer class="app-footer">
     <!-- Footer content here -->
-    <h3>@ 2019 Ever Safe Packer and Mover | All Right Reserved</h3>
+    <h3>@ 2019 My Company | All Right Reserved</h3>
   </footer>
 </body>
