--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,6 +34,6 @@
   </div>
   <footer class="app-footer">
     <!-- Footer content here -->
-    <h3>@ 2019 Ever Safe Packer and Mover | All Right Reserved</h3>
+    <h3>@ 2019 My Company | All Right Reserved</h3>
   </footer>
 </body>
