--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,6 +22,7 @@
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
+  font-weight: bold;
 }
 #primary {
   color: blue;
@@ -39,4 +40,7 @@
   background-color: gray;
 }
 
+body{
+  font-size: 14px;
+}
 
