--- a/src/app/contactus/contact.component.css
+++ b/src/app/contactus/contact.component.css
@@ -1,28 +1,22 @@
-.paragraph {
-  text-align: left;
-}
-.align {
-  padding-left: 40%;
-}
-.welcome {
-  background-color: #90ee90;
-  width: fit-content;
-}
-
-.found {
-  padding-top: 150px;
-  margin: 5px;
-  /* width: 230px; */
-  text-align: center;
-  color: green;
-  font-size: 30px;
-  font-weight: bold;
-  margin-left: 50px;
-}
 .app {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
     min-height: 88vh;
+}
+body{
+  font-size: 14px;
+}
+.center{
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
+}
+.right{
+
+  text-align: left;
+}
+.left{
+text-align: left;
 }
