--- a/src/app/services/nav.component.html
+++ b/src/app/services/nav.component.html
@@ -8,29 +8,21 @@
         <div class="row" style="margin-top: 10px;">
           <div class="col-md-12">
             <div class="card mb-3  table-size">
-              <!-- <div class="card-header">
-                      {{getHeaderText()}}
-                    </div> -->
               <div class="card-body table-responsive">
-
                 <div *ngIf="!showTable" class="d-flex justify-content-center">
                   No payment Record Found
                 </div>
               </div>
             </div>
           </div>
-
-
-
-
         </div>
       </div>
       <!-- Main content end here -->
 
     </main>
   </div>
+  <!-- Footer content here -->
   <footer class="app-footer">
-    <!-- Footer content here -->
-    <h3>@ 2019 Ever Safe Packer and Mover | All Right Reserved</h3>
+    <h3>@ 2019 My Company | All Right Reserved</h3>
   </footer>
 </body>
